--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -152,3 +152,4 @@
 @import "components/ads-box";
 @import "components/full-calendar";
 @import "components/pristine";
+@import "~select2/src/scss/core";
