--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2744,6 +2744,10 @@ video {
 	margin-top: 2.5rem;
 	margin-bottom: 2.5rem;
 }
+.my-5{
+	margin-top: 1.25rem;
+	margin-bottom: 1.25rem;
+}
 .mx-3{
 	margin-left: 0.75rem;
 	margin-right: 0.75rem;
