--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1004,6 +1004,13 @@ video {
 	--tw-bg-opacity: 1;
 	background-color: rgba(35, 42, 59, var(--tw-bg-opacity));
 }
+.form-help{
+	margin-top: 0.5rem;
+	font-size: 0.75rem;
+	line-height: 1rem;
+	--tw-text-opacity: 1;
+	color: rgba(82, 82, 91, var(--tw-text-opacity));
+}
 .form-inline .form-control{
 	flex: 1 1 0%;
 }
@@ -2599,21 +2606,6 @@ video {
 	--tw-bg-opacity: 1;
 	background-color: rgba(41, 49, 69, var(--tw-bg-opacity));
 }
-.progress-bar{
-	display: flex;
-	height: 100%;
-	align-items: center;
-	justify-content: center;
-	border-radius: 9999px;
-	font-size: 0.75rem;
-	line-height: 1rem;
-	--tw-text-opacity: 1;
-	color: rgba(255, 255, 255, var(--tw-text-opacity));
-}
-.dark .progress-bar{
-	--tw-bg-opacity: 1;
-	background-color: rgba(49, 96, 216, var(--tw-bg-opacity));
-}
 .nav{
 	display: flex;
 }
@@ -2875,9 +2867,6 @@ video {
 .mr-auto{
 	margin-right: auto;
 }
-.ml-auto{
-	margin-left: auto;
-}
 .mr-5{
 	margin-right: 1.25rem;
 }
@@ -2895,6 +2884,9 @@ video {
 }
 .-mt-px{
 	margin-top: -1px;
+}
+.ml-auto{
+	margin-left: auto;
 }
 .mt-12{
 	margin-top: 3rem;
@@ -2971,9 +2963,6 @@ video {
 .h-20{
 	height: 5rem;
 }
-.h-1{
-	height: 0.25rem;
-}
 .h-40{
 	height: 10rem;
 }
@@ -3042,9 +3031,6 @@ video {
 }
 .w-56{
 	width: 14rem;
-}
-.w-1\/2{
-	width: 50%;
 }
 .w-52{
 	width: 13rem;
@@ -3310,10 +3296,6 @@ video {
 	--tw-border-opacity: 1;
 	border-color: rgba(244, 244, 245, var(--tw-border-opacity));
 }
-.border-white{
-	--tw-border-opacity: 1;
-	border-color: rgba(255, 255, 255, var(--tw-border-opacity));
-}
 .border-theme-27{
 	--tw-border-opacity: 1;
 	border-color: rgba(32, 63, 173, var(--tw-border-opacity));
@@ -3321,6 +3303,10 @@ video {
 .border-gray-400{
 	--tw-border-opacity: 1;
 	border-color: rgba(161, 161, 170, var(--tw-border-opacity));
+}
+.border-white{
+	--tw-border-opacity: 1;
+	border-color: rgba(255, 255, 255, var(--tw-border-opacity));
 }
 .bg-white{
 	--tw-bg-opacity: 1;
@@ -3374,14 +3360,6 @@ video {
 	--tw-bg-opacity: 1;
 	background-color: rgba(211, 41, 41, var(--tw-bg-opacity));
 }
-.bg-theme-1{
-	--tw-bg-opacity: 1;
-	background-color: rgba(28, 63, 170, var(--tw-bg-opacity));
-}
-.bg-theme-14{
-	--tw-bg-opacity: 1;
-	background-color: rgba(230, 243, 255, var(--tw-bg-opacity));
-}
 .bg-theme-18{
 	--tw-bg-opacity: 1;
 	background-color: rgba(216, 248, 188, var(--tw-bg-opacity));
@@ -3390,6 +3368,10 @@ video {
 	--tw-bg-opacity: 1;
 	background-color: rgba(255, 239, 217, var(--tw-bg-opacity));
 }
+.bg-theme-14{
+	--tw-bg-opacity: 1;
+	background-color: rgba(230, 243, 255, var(--tw-bg-opacity));
+}
 .bg-theme-26{
 	--tw-bg-opacity: 1;
 	background-color: rgba(21, 50, 154, var(--tw-bg-opacity));
@@ -3397,6 +3379,10 @@ video {
 .bg-theme-11{
 	--tw-bg-opacity: 1;
 	background-color: rgba(247, 139, 0, var(--tw-bg-opacity));
+}
+.bg-theme-1{
+	--tw-bg-opacity: 1;
+	background-color: rgba(28, 63, 170, var(--tw-bg-opacity));
 }
 .bg-theme-12{
 	--tw-bg-opacity: 1;
@@ -3692,10 +3678,6 @@ video {
 	--tw-text-opacity: 1;
 	color: rgba(28, 63, 170, var(--tw-text-opacity));
 }
-.text-theme-10{
-	--tw-text-opacity: 1;
-	color: rgba(49, 96, 216, var(--tw-text-opacity));
-}
 .text-theme-6{
 	--tw-text-opacity: 1;
 	color: rgba(211, 41, 41, var(--tw-text-opacity));
@@ -3707,6 +3689,10 @@ video {
 .text-theme-11{
 	--tw-text-opacity: 1;
 	color: rgba(247, 139, 0, var(--tw-text-opacity));
+}
+.text-theme-10{
+	--tw-text-opacity: 1;
+	color: rgba(49, 96, 216, var(--tw-text-opacity));
 }
 .text-gray-200{
 	--tw-text-opacity: 1;
@@ -14775,13 +14761,13 @@ html body {
 	--tw-bg-opacity: 1;
 	background-color: rgba(250, 250, 250, var(--tw-bg-opacity));
 }
-.hover\:bg-gray-200:hover{
-	--tw-bg-opacity: 1;
-	background-color: rgba(228, 228, 231, var(--tw-bg-opacity));
-}
 .hover\:bg-theme-1:hover{
 	--tw-bg-opacity: 1;
 	background-color: rgba(28, 63, 170, var(--tw-bg-opacity));
+}
+.hover\:bg-gray-200:hover{
+	--tw-bg-opacity: 1;
+	background-color: rgba(228, 228, 231, var(--tw-bg-opacity));
 }
 .hover\:bg-red-400:hover{
 	--tw-bg-opacity: 1;
@@ -14941,25 +14927,9 @@ html body {
 	--tw-border-opacity: 1;
 	border-color: rgba(63, 72, 101, var(--tw-border-opacity));
 }
-.dark .dark\:border-gray-700{
-	--tw-border-opacity: 1;
-	border-color: rgba(63, 63, 70, var(--tw-border-opacity));
-}
 .dark .dark\:border-dark-3{
 	--tw-border-opacity: 1;
 	border-color: rgba(49, 58, 85, var(--tw-border-opacity));
-}
-.dark .dark\:bg-dark-1{
-	--tw-bg-opacity: 1;
-	background-color: rgba(41, 49, 69, var(--tw-bg-opacity));
-}
-.dark .dark\:bg-theme-1{
-	--tw-bg-opacity: 1;
-	background-color: rgba(28, 63, 170, var(--tw-bg-opacity));
-}
-.dark .dark\:bg-dark-5{
-	--tw-bg-opacity: 1;
-	background-color: rgba(63, 72, 101, var(--tw-bg-opacity));
 }
 .dark .dark\:bg-dark-3{
 	--tw-bg-opacity: 1;
@@ -14973,25 +14943,21 @@ html body {
 	--tw-bg-opacity: 1;
 	background-color: rgba(24, 24, 27, var(--tw-bg-opacity));
 }
-.dark .dark\:text-gray-300{
-	--tw-text-opacity: 1;
-	color: rgba(212, 212, 216, var(--tw-text-opacity));
+.dark .dark\:bg-dark-1{
+	--tw-bg-opacity: 1;
+	background-color: rgba(41, 49, 69, var(--tw-bg-opacity));
+}
+.dark .dark\:bg-dark-5{
+	--tw-bg-opacity: 1;
+	background-color: rgba(63, 72, 101, var(--tw-bg-opacity));
 }
 .dark .dark\:text-theme-10{
 	--tw-text-opacity: 1;
 	color: rgba(49, 96, 216, var(--tw-text-opacity));
 }
-.dark .dark\:text-white{
+.dark .dark\:text-gray-300{
 	--tw-text-opacity: 1;
-	color: rgba(255, 255, 255, var(--tw-text-opacity));
-}
-.dark .dark\:text-gray-500{
-	--tw-text-opacity: 1;
-	color: rgba(113, 113, 122, var(--tw-text-opacity));
-}
-.dark .dark\:text-gray-600{
-	--tw-text-opacity: 1;
-	color: rgba(82, 82, 91, var(--tw-text-opacity));
+	color: rgba(212, 212, 216, var(--tw-text-opacity));
 }
 .dark .dark\:text-gray-200{
 	--tw-text-opacity: 1;
@@ -15001,13 +14967,21 @@ html body {
 	--tw-text-opacity: 1;
 	color: rgba(161, 161, 170, var(--tw-text-opacity));
 }
-.dark .dark\:hover\:bg-dark-2:hover{
-	--tw-bg-opacity: 1;
-	background-color: rgba(35, 42, 59, var(--tw-bg-opacity));
+.dark .dark\:text-gray-600{
+	--tw-text-opacity: 1;
+	color: rgba(82, 82, 91, var(--tw-text-opacity));
+}
+.dark .dark\:text-gray-500{
+	--tw-text-opacity: 1;
+	color: rgba(113, 113, 122, var(--tw-text-opacity));
 }
 .dark .dark\:hover\:bg-dark-3:hover{
 	--tw-bg-opacity: 1;
 	background-color: rgba(49, 58, 85, var(--tw-bg-opacity));
+}
+.dark .dark\:hover\:bg-dark-2:hover{
+	--tw-bg-opacity: 1;
+	background-color: rgba(35, 42, 59, var(--tw-bg-opacity));
 }
 @media (min-width: 640px){
 	.sm\:col-span-4{
@@ -15218,14 +15192,14 @@ html body {
 	.lg\:col-span-4{
 		grid-column: span 4 / span 4;
 	}
-	.lg\:col-span-8{
-		grid-column: span 8 / span 8;
-	}
 	.lg\:col-span-9{
 		grid-column: span 9 / span 9;
 	}
 	.lg\:col-span-3{
 		grid-column: span 3 / span 3;
+	}
+	.lg\:col-span-8{
+		grid-column: span 8 / span 8;
 	}
 	.lg\:mt-0{
 		margin-top: 0px;
