--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2779,6 +2779,10 @@ video {
 	margin-top: 2.5rem;
 	margin-bottom: 2.5rem;
 }
+.my-2{
+	margin-top: 0.5rem;
+	margin-bottom: 0.5rem;
+}
 .mx-3{
 	margin-left: 0.75rem;
 	margin-right: 0.75rem;
@@ -2879,11 +2883,11 @@ video {
 .-mt-3{
 	margin-top: -0.75rem;
 }
-.mb-5{
-	margin-bottom: 1.25rem;
-}
 .-mt-px{
 	margin-top: -1px;
+}
+.mb-5{
+	margin-bottom: 1.25rem;
 }
 .ml-auto{
 	margin-left: auto;
@@ -2969,14 +2973,14 @@ video {
 .h-full{
 	height: 100%;
 }
-.h-32{
-	height: 8rem;
-}
 .h-2{
 	height: 0.5rem;
 }
 .h-px{
 	height: 1px;
+}
+.h-32{
+	height: 8rem;
 }
 .h-3{
 	height: 0.75rem;
@@ -3035,11 +3039,11 @@ video {
 .w-52{
 	width: 13rem;
 }
-.w-40{
-	width: 10rem;
-}
 .w-2{
 	width: 0.5rem;
+}
+.w-40{
+	width: 10rem;
 }
 .w-24{
 	width: 6rem;
@@ -3360,18 +3364,6 @@ video {
 	--tw-bg-opacity: 1;
 	background-color: rgba(211, 41, 41, var(--tw-bg-opacity));
 }
-.bg-theme-18{
-	--tw-bg-opacity: 1;
-	background-color: rgba(216, 248, 188, var(--tw-bg-opacity));
-}
-.bg-theme-17{
-	--tw-bg-opacity: 1;
-	background-color: rgba(255, 239, 217, var(--tw-bg-opacity));
-}
-.bg-theme-14{
-	--tw-bg-opacity: 1;
-	background-color: rgba(230, 243, 255, var(--tw-bg-opacity));
-}
 .bg-theme-26{
 	--tw-bg-opacity: 1;
 	background-color: rgba(21, 50, 154, var(--tw-bg-opacity));
@@ -3388,12 +3380,24 @@ video {
 	--tw-bg-opacity: 1;
 	background-color: rgba(251, 197, 0, var(--tw-bg-opacity));
 }
+.bg-theme-14{
+	--tw-bg-opacity: 1;
+	background-color: rgba(230, 243, 255, var(--tw-bg-opacity));
+}
 .bg-green-500{
 	--tw-bg-opacity: 1;
 	background-color: rgba(34, 197, 94, var(--tw-bg-opacity));
 }
 .bg-transparent{
 	background-color: transparent;
+}
+.bg-theme-18{
+	--tw-bg-opacity: 1;
+	background-color: rgba(216, 248, 188, var(--tw-bg-opacity));
+}
+.bg-theme-17{
+	--tw-bg-opacity: 1;
+	background-color: rgba(255, 239, 217, var(--tw-bg-opacity));
 }
 .bg-theme-9{
 	--tw-bg-opacity: 1;
@@ -3682,18 +3686,6 @@ video {
 	--tw-text-opacity: 1;
 	color: rgba(211, 41, 41, var(--tw-text-opacity));
 }
-.text-theme-9{
-	--tw-text-opacity: 1;
-	color: rgba(145, 199, 20, var(--tw-text-opacity));
-}
-.text-theme-11{
-	--tw-text-opacity: 1;
-	color: rgba(247, 139, 0, var(--tw-text-opacity));
-}
-.text-theme-10{
-	--tw-text-opacity: 1;
-	color: rgba(49, 96, 216, var(--tw-text-opacity));
-}
 .text-gray-200{
 	--tw-text-opacity: 1;
 	color: rgba(228, 228, 231, var(--tw-text-opacity));
@@ -3702,6 +3694,14 @@ video {
 	--tw-text-opacity: 1;
 	color: rgba(212, 212, 216, var(--tw-text-opacity));
 }
+.text-theme-10{
+	--tw-text-opacity: 1;
+	color: rgba(49, 96, 216, var(--tw-text-opacity));
+}
+.text-theme-9{
+	--tw-text-opacity: 1;
+	color: rgba(145, 199, 20, var(--tw-text-opacity));
+}
 .text-theme-12{
 	--tw-text-opacity: 1;
 	color: rgba(251, 197, 0, var(--tw-text-opacity));
@@ -3709,6 +3709,10 @@ video {
 .text-theme-20{
 	--tw-text-opacity: 1;
 	color: rgba(57, 94, 193, var(--tw-text-opacity));
+}
+.text-theme-11{
+	--tw-text-opacity: 1;
+	color: rgba(247, 139, 0, var(--tw-text-opacity));
 }
 .text-theme-28{
 	--tw-text-opacity: 1;
@@ -15192,14 +15196,14 @@ html body {
 	.lg\:col-span-4{
 		grid-column: span 4 / span 4;
 	}
+	.lg\:col-span-8{
+		grid-column: span 8 / span 8;
+	}
 	.lg\:col-span-9{
 		grid-column: span 9 / span 9;
 	}
 	.lg\:col-span-3{
 		grid-column: span 3 / span 3;
-	}
-	.lg\:col-span-8{
-		grid-column: span 8 / span 8;
 	}
 	.lg\:mt-0{
 		margin-top: 0px;
